--- a/premiumRoom.html
+++ b/premiumRoom.html
@@ -150,6 +150,18 @@
             const Sidebar= document.getElementById("sidebar");
             Sidebar.style.display="none";
         }
+        var Premium_bigger_img = document.querySelectorAll('.premium_bigger_img');
+        function clickToBigger (event){
+            var clickedImg = event.target;
+            Premium_bigger_img.forEach(function(bigger_img){
+                if (bigger_img !== clickedImg){
+                bigger_img.classList.remove('active');}
+            });
+            clickedImg.classList.toggle('active');
+        }
+        Premium_bigger_img.forEach(function(bigger_img){
+            bigger_img.addEventListener('click', clickToBigger);
+        });
     </script>
 </body>
 </html>
