change namepage and fix small bugs

--- a/service.html
+++ b/service.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./image/logo.jpg">
@@ -29,11 +29,11 @@
                 <li><a href="login.html">Đặt phòng ngay</a></li>
             </ul>
         </nav>
-        <div class="service_heading_img">
-            <h2>Phòng nghỉ</h2>
-        </div>
     </header>
     <section>
+        <div class="service_heading">
+            <h2>Dịch vụ</h2>
+        </div>
         <div id="heading_img">
             <img src="./image/beboilothien.png" alt="Bể bơi lộ thiên">
         </div>
