--- a/regis.html
+++ b/regis.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -124,7 +124,7 @@
                 Loader.style.display = "block";
                 setTimeout(function() {
                 window.location.href="index.html"
-                }, 3000);
+                }, 2000);
                 return true;
             };
         }
